#7680 Prevent horizontal scrollbar in identify tool + properties template. (#7700)
(cherry picked from commit 63feb87714e9c641aa59374f070a23a226857151)

--- a/web/client/themes/default/less/get-feature.less
+++ b/web/client/themes/default/less/get-feature.less
@@ -274,7 +274,7 @@
 
 .ms-properties-viewer {
     width: 100%;
-    min-width: 256px;
+    min-width: 100%;
     padding: 8px;
     + .ms-properties-viewer {
         margin-top: 8px;
